public/stylesheets/style.css
body {
  padding: 0px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

/* li {
  font-size: 1.8em;
} */

h3.titles {
  font-size: 2em;
  font-weight: bold;
}
a,
a:hover {
  color: #00b7ff;
  text-decoration: none;
}

a#title {
  font-family: "Dancing Script", cursive;
  font-size: 1.5em;
}

#header__logo__container {
  height: 500px;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

#header__logo {
  width: 500px;
}

div.col-md-6 {
  padding: 100px;
}

div#header__container {
  background: #c9d6ff; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #e2e2e2,
    #c9d6ff
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #e2e2e2,
    #c9d6ff
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

a#numberbar__a {
  font-size: 0.7em;
  color: white;
}

div#card__featured {
  border-color: #00b7ff;
  border-width: 0.3em;
}

i#big-icon {
  font-size: 1em;
}

